--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   </dependencies>
 
   <build>
-    <finalName>${artifactId}-${version}-${build.number}</finalName>
+    <finalName>${project.artifactId}-${project.version}-${build.number}</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
