--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,16 +1,12 @@
-# This is a sample build configuration for Java (Maven).
-# Check our guides at https://confluence.atlassian.com/x/zd-5Mw for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-# image: maven:3.6.1
+# build using the latest maven with amazon corretto jdk image
+image: maven:amazoncorretto
 
 pipelines:
   default:
     - step:
         caches:
           - maven
-        script: # Modify the commands below to build your repository.
-          - mvn verify # -B batch mode makes Maven less verbose
+        script:
+          - mvn verify
           - mvn clean package -DskipTests
           - mvn test
